--- a/package.json
+++ b/package.json
@@ -14,30 +14,31 @@
   "author": "CURIT, remkoboschker, albertjan",
   "license": "MIT",
   "devDependencies": {
-    "broccoli-asset-rev": "^2.1.2",
-    "ember-cli": "1.13.8",
+    "broccoli-asset-rev": "^2.4.2",
+    "ember-ajax": "0.7.1",
+    "ember-cli": "2.4.3",
     "ember-cli-app-version": "^1.0.0",
-    "ember-cli-content-security-policy": "0.4.0",
-    "ember-cli-dependency-checker": "^1.0.1",
-    "ember-cli-htmlbars": "0.7.9",
-    "ember-cli-htmlbars-inline-precompile": "^0.2.0",
-    "ember-cli-ic-ajax": "0.2.1",
-    "ember-cli-inject-live-reload": "^1.3.1",
-    "ember-cli-qunit": "^1.0.0",
-    "ember-cli-release": "0.2.3",
-    "ember-cli-sri": "^1.0.3",
+    "ember-cli-dependency-checker": "^1.2.0",
+    "ember-cli-htmlbars": "^1.0.3",
+    "ember-cli-htmlbars-inline-precompile": "^0.3.1",
+    "ember-cli-inject-live-reload": "^1.4.0",
+    "ember-cli-qunit": "^1.4.0",
+    "ember-cli-release": "0.2.8",
+    "ember-cli-sri": "^2.1.0",
     "ember-cli-uglify": "^1.2.0",
-    "ember-disable-prototype-extensions": "^1.0.0",
-    "ember-disable-proxy-controllers": "^1.0.0",
-    "ember-export-application-global": "^1.0.3",
-    "ember-suave": "1.2.3 ",
-    "ember-try": "0.0.6"
+    "ember-data": "^2.4.2",
+    "ember-disable-prototype-extensions": "^1.1.0",
+    "ember-export-application-global": "^1.0.5",
+    "ember-load-initializers": "^0.5.1",
+    "ember-resolver": "^2.0.3",
+    "ember-try": "^0.2.2",
+    "loader.js": "^4.0.1"
   },
   "dependencies": {
-    "broccoli-filter": "^1.2.2",
-    "ember-cli-babel": "^5.1.5",
+    "ember-cli-babel": "^5.1.6",
+    "broccoli-filter": "^1.2.3",
     "inflected": "^1.1.6",
-    "yadda": "^0.15.4"
+    "yadda": "^0.17.5"
   },
   "keywords": [
     "ember-addon",
@@ -50,9 +51,6 @@
     "features"
   ],
   "ember-addon": {
-    "configPath": "tests/dummy/config",
-    "before": [
-      "ember-cli-babel"
-    ]
+    "configPath": "tests/dummy/config"
   }
 }
