--- a/bower.json
+++ b/bower.json
@@ -11,7 +11,6 @@
     "ember-resolver": "~0.1.20",
     "jquery": "1.11.3",
     "loader.js": "ember-cli/loader.js#3.4.0",
-    "qunit": "~1.20.0",
-    "yadda": "acuminous/yadda#~0.17.6"
+    "qunit": "~1.20.0"
   }
 }
