--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "license": "MIT",
   "devDependencies": {
     "broccoli-asset-rev": "^2.2.0",
+    "ember-browserify": "1.1.13",
     "ember-cli": "1.13.15",
     "ember-cli-app-version": "^1.0.0",
     "ember-cli-content-security-policy": "0.4.0",
@@ -31,14 +32,14 @@
     "ember-disable-proxy-controllers": "^1.0.1",
     "ember-export-application-global": "^1.0.4",
     "ember-suave": "1.2.3 ",
-    "ember-try": "~0.0.8"
+    "ember-try": "~0.0.8",
+    "yadda": "^0.22.1"
   },
   "dependencies": {
     "broccoli-filter": "^1.2.2",
     "ember-cli": "^1.13.15",
     "ember-cli-babel": "^5.1.5",
-    "inflected": "^1.1.6",
-    "yadda": "^0.15.4"
+    "inflected": "^1.1.6"
   },
   "keywords": [
     "ember-addon",
